zishao-v410-deploy-backup-update-0525

--- a/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/2.deploy-ocp/2.deploy-ocp-graphical.md
+++ b/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/2.deploy-ocp/2.deploy-ocp-graphical.md
@@ -20,7 +20,7 @@ Before you install OCP, ensure that:
 
 1. Log on to the OAT console as an administrator or an O&M engineer.
 
-2. In the left-side navigation pane, choose **Product Service \> Product Management**.
+2. In the left-side navigation pane, choose **Product Service \> Service Management**.
 
 3. On the **Service Management** page, click **Install Product** in the upper-right corner, and choose **Install OCP**.
 
@@ -32,14 +32,14 @@ Before you install OCP, ensure that:
 
    | Parameter | Description |
    |------|------|
-   | OCP image | The Docker image of OCP.  |
+   | OCP Image | The Docker image of OCP.  |
    | Product Name | The name of the product, which cannot be the same as that of another product.  |
    | Multi-zone Mode | When you enable the multi-zone deployment, you must specify the following parameters:<ul><li>**Zone Name**: The name of the zone. </li><li> **Server**: The IP address of the server on which OCP is to be installed. </li><li>**OCP Proxy IP**: The IP address of the OCP access portal in the zone. </li><li>**OCP Proxy Port**: The port number of the OCP access portal in the zone. Default value: `80`. </li><li>**MetaDB Proxy IP**: The IP address of the MetaDB proxy. </li><li>**MetaDB Proxy Port**: The port number of the MetaDB proxy. Default value: `2883`.  |
    | Server | The IP address of the server on which OCP is to be installed.  |
    | CPU | The number of CPU cores allocated to OCP. Default value: `8C`.  |
    | Memory | The memory allocated to OCP. Default value: `20GB`.  |
    | HTTP Port | The HTTP port number of OCP. Default value: `8080`.  |
-   | Multi-cluster Mode | Specifies whether to enable the multi-cluster deployment mode.  |
+   | Multi-Cluster Mode | Specifies whether to enable the multi-cluster deployment mode.  |
    | Log Directory | The log storage path of OCP. Default value: `/home/admin/logs/ocp`.  |
 
    <!-- ![2](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/4.deploy-the-oceanbase-database/OAT/deploy-ocp/2%E5%9F%BA%E7%A1%80%E9%85%8D%E7%BD%AE.png) -->
@@ -53,14 +53,14 @@ Before you install OCP, ensure that:
    | OCP Meta Tenant | The dedicated tenant for OCP MetaDB.  |
    | Tenant Name | The name of the MetaDB tenant.  |
    | Tenant Password | The password of the MetaDB tenant.  |
-   | CPU | The number of CPU cores allocated to MetaDB. Default value: `2C`.  |
-   | Memory | The memory allocated to MetaDB. Default value: `5GB`.  |
+   | Tenant CPU | The number of CPU cores allocated to MetaDB. Default value: `2C`.  |
+   | Tenant Memory | The memory allocated to MetaDB. Default value: `5GB`.  |
    | OCP Monitor Tenant | The dedicated tenant for OCP MonitorDB.  |
    | Tenant Name | The name of the MonitorDB tenant.  |
    | Tenant Password | The password of the MonitorDB tenant.  |
-   | CPU | The number of CPU cores allocated to MonitorDB. Default value: `4C`.  |
-   | Memory | The memory allocated to MonitorDB. Default value: `16GB`.  |
-   | Take over the MetaDB cluster | You can select this option to take over the MetaDB cluster. You can view the MetaDB cluster on OCP after the takeover. Each MetaDB cluster can be taken over by only one OCP.  |
+   | Tenant CPU | The number of CPU cores allocated to MonitorDB. Default value: `4C`.  |
+   | Tenant Memory | The memory allocated to MonitorDB. Default value: `16GB`.  |
+   | Take over the MetaDB Cluster | You can select this option to take over the MetaDB cluster. You can view the MetaDB cluster on OCP after the takeover. Each MetaDB cluster can be taken over by only one OCP.  |
 
    <!-- ![3](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/4.deploy-the-oceanbase-database/OAT/deploy-ocp/3metadb%E9%85%8D%E7%BD%AE.png) -->
 
@@ -68,7 +68,7 @@ Before you install OCP, ensure that:
 
    | Parameter | Description |
    |------|------|
-   | Load Balancing Configuration | Select the load balancing mode.  |
+   | Load Balancing Mode | Select the load balancing mode.  |
    | Select Created OBDNS | Select a created OBDNS.  |
    | HTTP Proxy Domain Name | The HTTP proxy domain name that is used to access the OCP console.  |
    | HTTP Proxy Port | The HTTP port number. Default value: `80`.  |
@@ -79,7 +79,7 @@ Before you install OCP, ensure that:
 
    You can also click **Reset** to restore the default configurations.
 
-## Subsequent operations
+## What to do next
 
 For more information about how to verify OCP deployment, see [Verify OCP deployment](3.post-deployment-check-ocp-graphical.md).
 
