--- a/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/5.create-oceanbase-tenant/2.create-a-tenant-graphical.md
+++ b/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/5.create-oceanbase-tenant/2.create-a-tenant-graphical.md
@@ -4,13 +4,11 @@ After you confirm the remaining resources of the OceanBase cluster, you can crea
 
 You can use one of the following methods to create a tenant.
 
-* Create a tenant on the Tenants page.
+* Create a tenant on the **Tenants** page.
 
-* Create a tenant on the Overview page of the specified cluster.
+* Create a tenant on the **Overview** page of the specified cluster.
 
-This topic describes how to create a tenant on the Tenant Management page of the specified cluster.
-
-This topic describes how to create a business tenant in the OceanBase cluster in OceanBase Cloud Platform (OCP).
+This topic describes how to create a tenant on the **Tenant Management** page of the specified cluster in OceanBase Cloud Platform (OCP).
 
   <main id="notice" type='explain'>
     <h4>Note</h4>
@@ -19,9 +17,9 @@ This topic describes how to create a business tenant in the OceanBase cluster in
 
 ## Prerequisites
 
-* The cluster where you want to create the tenant is the running primary cluster.
+* The cluster where you want to create a tenant is the running primary cluster.
 
-* You are logged on with an account that has the permission to manage the cluster. For example, the user is the system administrator or the OceanBase Cloud Platform (OCP) tenant administrator.
+* Your account has the permission to manage the cluster. For example, the account is the system administrator or the OCP tenant administrator.
 
 ## Procedure
 
@@ -33,7 +31,7 @@ This topic describes how to create a business tenant in the OceanBase cluster in
 
    <!-- ![1](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/4.deploy-the-oceanbase-database/OCP/11%E7%A7%9F%E6%88%B7%E5%88%97%E8%A1%A8.png) -->
 
-4. On the **Create Tenant** page, configure the **basic information** of the tenant.
+4. On the **Create Tenant** page, configure the basic information of the tenant.
 
    <!-- ![2](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/4.deploy-the-oceanbase-database/OCP/12%E6%96%B0%E5%BB%BA%E7%A7%9F%E6%88%B7%E5%9F%BA%E7%A1%80%E4%BF%A1%E6%81%AF.png) -->
 
@@ -44,7 +42,7 @@ This topic describes how to create a business tenant in the OceanBase cluster in
    | Tenant Name | The tenant name must contain 2 to 64 characters consisting of letters, digits, and underscores (_).  |
    | Administrator Password | <ul><li>In MySQL mode, the administrator account is root. </li><li>In Oracle mode, the administrator account is SYS. </li><li>The password must be 8 to 32 characters in length and contain at least two digits, two uppercase letters, two lowercase letters, and two special characters. The supported special characters are ~ ! @ # % ^ & * _ - + = ` | (){}[]:;',.?/</li></ul> |
    | Character Set | <ul><li>In MySQL mode, the supported character sets are utf8mb4, binary, gbk, and gb18030. Default value: utf8mb4. </li><li> In Oracle mode, the supported character sets are utf8mb4, gbk, and gb18030. Default value: utf8mb4. </li></ul> |
-   | Collation | <blockquote><b>Note </b></br>You need to specify **Collation** only when you set **Tenant Mode** to MySQL. <ul><li>If you set Character Set to binary, the valid value of the <b>Collation</b> parameter is binary. </li><li>If you set Character Set to utf8mb4, valid values of the <b>Collation</b> parameter are utf8mb4_bin, utf8mb4_general_ci, and utf8mb4_unicode_ci. Default value: utf8mb4_general_ci. </li><li>If you set Character Set to gbk, <b>Collation</b> can be set to gbk_bin or gbk_chinese_ci. Default value: gbk_chinese_ci. </li><li>If you set Character Set to gb18030, the valid value of the <b>Collation</b> parameter is gb18030_bin. Default value: gb18030_chinese_ci. </li></ul></blockquote> |
+   | Collation | <blockquote><b>Note </b></br>You need to specify **Collation** only when you set **Tenant Mode** to MySQL. <ul><li>If you set **Character Set** to binary, the valid value of the <b>Collation</b> parameter is binary. </li><li>If you set **Character Set** to utf8mb4, valid values of the <b>Collation</b> parameter are utf8mb4_bin, utf8mb4_general_ci, and utf8mb4_unicode_ci. Default value: utf8mb4_general_ci. </li><li>If you set **Character Set** to gbk, <b>Collation</b> can be set to gbk_bin or gbk_chinese_ci. Default value: gbk_chinese_ci. </li><li>If you set **Character Set** to gb18030, the valid value of the <b>Collation</b> parameter is gb18030_bin. Default value: gb18030_chinese_ci. </li></ul></blockquote> |
    | Remarks (Optional) | The additional information.  |
 
 5. On the **Create Tenant** page, configure replica settings.
@@ -53,7 +51,7 @@ This topic describes how to create a business tenant in the OceanBase cluster in
 
    If the version of the cluster is V4.0.0 or later, you can only set the same number of units for all zones. The default value is 1.
 
-   By default, the system displays configurable zones based on the zone information of the selected cluster. If you do not need to create a replica in a zone, click the Delete icon to delete the zone. The zone information fields that need to be configured and their descriptions are listed in the following table.
+   By default, the system displays configurable zones based on the zone information of the selected cluster. If you do not need to create a replica in a zone, click the **Delete** icon to delete the zone. The zone information fields that need to be configured and their descriptions are listed in the following table.
 
    | Field | Description |
    |---------------|---------------|
@@ -77,12 +75,12 @@ This topic describes how to create a business tenant in the OceanBase cluster in
 
 <ul>
    <li>Access from all IP addresses is supported. </li>
-   <li>Custom: Only IP addresses on the whitelist are allowed to access this tenant. When you configure the whitelist, you must add the IP addresses of the OCP and ODP servers to the whitelist. Otherwise, you cannot manage the tenant in OCP. </li>
+   <li>Custom: Only IP addresses on the allowlist are allowed to access this tenant. When you configure the allowlist, you must add the IP addresses of the OCP and ODP servers to the allowlist. Otherwise, you cannot manage the tenant in OCP. </li>
    </ul>
 
    <main id="notice" type='explain'>
      <h4>Note</h4>
-     <p>Configure the whitelist in the following formats:</p>
+     <p>Configure the allowlist in the following formats:</p>
      <ul>
      <li>IP addresses, for example: 10.10.10.10,10.10.10.11</li>
      <li>CIDR block, for example: 10.10.10.0/24</li>
@@ -97,6 +95,6 @@ This topic describes how to create a business tenant in the OceanBase cluster in
 
 8. Click **Submit**.
 
-## Subsequent operations
+## What to do next
 
 For more information about how to verify connectivity after you create the tenant, see [Verify connectivity after tenant creation](3.verify-after-deployment-tenant-graphical.md).
