--- a/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/6.deploy-odc/2.deploy-odc-graphical.md
+++ b/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/6.deploy-odc/2.deploy-odc-graphical.md
@@ -57,7 +57,7 @@ Before you install ODC, ensure that:
    | Tenant CPU | The number of CPU cores allocated to MetaDB on each server. Default value: `2C`.  |
    | Tenant Memory | The memory allocated to MetaDB on each server. Default value: `5G`.  |
 
-6. Optional. On the Install ODC page, set **Load Balancing Configuration**.
+6. Optional. On the **Install ODC** page, set **Load Balancing Configuration**.
 
    <!-- ![5](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/4.deploy-the-oceanbase-database/OAT/deploy-odc/4%E8%B4%9F%E8%BD%BD%E5%9D%87%E8%A1%A1%E9%85%8D%E7%BD%AE.png) -->
 
@@ -92,6 +92,6 @@ Before you install ODC, ensure that:
 
    You can also click **Reset** to restore the default configurations.
 
-## Subsequent operations
+## What to do next
 
 For more information about how to verify ODC deployment, see [Verify ODC deployment](3.post-deployment-check-odc-graphical.md).
