--- a/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/1.configure-a-deployment-environment-command-line/3.configure-clock-source-command-line.md
+++ b/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/1.configure-a-deployment-environment-command-line/3.configure-clock-source-command-line.md
@@ -1,10 +1,10 @@
 # Configure the clock source
 
-OceanBase products have implicit relationships in time. Therefore, the physical time on all servers of the OceanBase products must be synchronous with an offset of less than 100 ms or even smaller. Therefore, the clocks of multiple nodes in a cluster and OCP nodes must be configured with the clock synchronization service (NTP or Chrony) to ensure that the clock offset of all nodes is within 100 ms. This topic describes how to configure the clock source under the Network Time Protocol (NTP) for multiple servers in a cluster. Skip this topic if you install OceanBase Database on a single server.
+OceanBase products have implicit relationships in time. Therefore, the physical time on all servers of the OceanBase products must be synchronous with a deviation of less than 2 seconds or even smaller. Therefore, the clocks of multiple nodes in a cluster and OCP nodes must be configured with the clock synchronization service (NTP or Chrony) to ensure that the clock deviation of all nodes is within 2 seconds. This topic describes how to configure the clock source under the Network Time Protocol (NTP) for multiple servers in a cluster. Skip this topic if you install OceanBase Database on a single server.
 
   <main id="notice" type='explain'>
     <h4>Note</h4>
-    <p>The clocks of servers in the OceanBase cluster must be synchronized. Otherwise, the OceanBase cluster may not start or will encounter operational exceptions. A physical server is synchronous with the clock source server when the clock offset between them is 50 ms or lower. The tolerable clock offset of an OceanBase cluster cannot exceed 100 ms. When the clock offset exceeds 100 ms, the cluster may become leaderless. You can synchronize the clock and restart the OceanBase cluster to restore it to normal. If you have already configured the Network Time Protocol (NTP) clock source, no need to do it again. </p>
+    <p>OceanBase Database V4.1 allows for a clock deviation of up to 2 seconds, enabling dynamic clock modification without compromising the accuracy of data or the stable operation of the cluster. </p>
   </main>
 
 ## Prerequisites
@@ -74,7 +74,7 @@ Perform the following steps to configure the NTP clock source.
 
   <main id="notice" type='explain'>
     <h4>Note</h4>
-    <p>If the NTP service has just been started, you need to wait for a moment before running the `ntpstat` command. </p>
+    <p>If the NTP service has just been started, you need to wait for a moment before running the <code>ntpstat</code> command. </p>
   </main>
 
 ```shell
