--- a/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/1.configure-a-deployment-environment-command-line/5.configure-host-information.md
+++ b/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/1.configure-a-deployment-environment-command-line/5.configure-host-information.md
@@ -10,11 +10,11 @@ Perform the following steps to configure the host information on all servers:
 
    ```shell
    [root@xxx /]# vi /etc/hosts
-   10.10.10.1 observer1
+   xxx.xxx.xxx.xxx observer1
    ```
 
    <main id="notice" type='notice'>
-     <h4>Notice</h4>
+     <h4>Note</h4>
      <p>Fill in the actual IP address. The IP address in the sample code is for reference only. </p>
    </main>
 
@@ -36,5 +36,5 @@ Perform the following steps to configure the host information on all servers:
 
    ```shell
    [root@xxx /]# hostname -i
-   10.10.10.1
+   xxx.xxx.xxx.xxx
    ```
