--- a/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/1.configure-a-deployment-environment-command-line/6.environment-check-before-deployment.md
+++ b/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/1.configure-a-deployment-environment-command-line/6.environment-check-before-deployment.md
@@ -24,9 +24,9 @@ sh precheck.sh -m ob
 
 If the command output contains the `FAIL` information, modify the configuration based on the error information.
 
-## Backup and recovery servers
+## Backup and restore servers
 
-On all backup and recovery servers, run the following commands:
+On all backup and restore servers, run the following commands:
 
 ```shell
 [root@hostname /]# cd /root/t-oceanbase-antman/clonescripts
