--- a/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/2.deploy-ocp-command-line/1.deployment-instructions-ocp-command-line.md
+++ b/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/2.deploy-ocp-command-line/1.deployment-instructions-ocp-command-line.md
@@ -4,9 +4,9 @@ OceanBase Cloud Platform (OCP) runs in a Docker container. OCP and OceanBase Dat
 
 ## About OCP
 
-OCP is an enterprise-level database management platform for OceanBase Database. You can install, upgrade, scale up, and uninstall OceanBase Database clusters, create and manage maintenance tasks, monitor the cluster running status, and view alerts in OCP with a few clicks.
+OCP is an enterprise-level database management platform for OceanBase Database. You can install, upgrade, scale up, and uninstall OceanBase clusters, create and manage maintenance tasks, monitor the cluster running status, and view alerts in OCP with a few clicks.
 
-OCP supports all major versions of OceanBase Database and the full-lifecycle management of components such as OceanBase clusters and OceanBase Database tenants. It manages OceanBase Database resources such as hosts, networks, and software packages. You can use OCP to manage OceanBase clusters more efficiently at reduced IT O&M costs.
+OCP provides full-lifecycle management of components such as OceanBase clusters and tenants, and manages OceanBase resources such as hosts, networks, and software packages. It enables you to manage OceanBase clusters more efficiently and reduce the IT O&M costs for enterprises.
 
 OCP can be deployed in single-node, three-node, or multi-zone mode.
 
