--- a/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/2.deploy-ocp-command-line/2.generate-configuration-file-ocp-command-line.md
+++ b/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/2.deploy-ocp-command-line/2.generate-configuration-file-ocp-command-line.md
@@ -4,7 +4,6 @@ Before the deployment of OceanBase Cloud Platform (OCP), you must use oat-cli, t
 
 ## Configure environment variables
 
-### Description
 
 You can execute an SSH connection by specifying environment variables. Non-root users and private keys are supported for the connection. For more information, see the help information in `install.sh -h`. Note that password-free SSH logon is no longer supported. This is to improve security.
 
@@ -47,7 +46,7 @@ Example:
 export SSH_AUTH = password
 export SSH_USER = root
 export SSH_PORT = 22
-export SSH_PASSWORD = 'abc123'
+export SSH_PASSWORD = '******'
 export SSH_KEY_FILE = /root/.ssh/id_rsa
 ```
 
@@ -95,7 +94,7 @@ export SSH_KEY_FILE = /root/.ssh/id_rsa
 
    * Allocate resources to the Docker container based on the CPU and memory resources of the physical server.
 
-   * You can run the `docker load -i {docker image package}` command and the `docker images` command to obtain the version information of Docker containers of the OBServer, OceanBase Database Proxy (ODP), and OCP.
+   * You can run the `docker load -i {docker image package}` command and the `docker images` command to obtain the version information of Docker containers of the OBServer node, OceanBase Database Proxy (ODP), and OCP.
 
    * To deploy OceanBase Migration Service (OMS), enter the basic configuration of OMS, including the IP address of the OMS server and the version information of the OMS Docker container.
 
@@ -146,10 +145,10 @@ export SSH_KEY_FILE = /root/.ssh/id_rsa
       * If you select `F5` for `lb_mode`, you need to configure the virtual IP addresses (VIPs) and virtual port numbers of ODP and OCP. You need to apply for the VIPs and port numbers in advance.
 
    * Allocate resources to the Docker containers based on the CPU and memory resources of the physical servers.</br>
-      Default specifications: 32C/128G (32 CPU cores and 128 GB of memory) for OBServer, 8C/16G (8 CPU cores and 16 GB of memory) for OCP, and 4C/12G (4 CPU cores and 12 GB of memory) for ODP.</br>
+      Default specifications: 32C/128G (32 CPU cores and 128 GB of memory) for OBServer node, 8C/16G (8 CPU cores and 16 GB of memory) for OCP, and 4C/12G (4 CPU cores and 12 GB of memory) for ODP.</br>
       If the physical server is provided based on the recommended minimum configuration, you can customize the server resources. The OBServer resources must be greater than 24C/100G (24 CPU cores and 100 GB of memory), the OCP resources must be greater than 4C/8G (4 CPU cores and 8 GB of memory), and ODP resources must be greater than 2C/10G (2 CPU cores and 10 GB of memory).
 
-   * You can run the `docker load -i {docker image package}` command and the `docker images` command to obtain the version information of Docker containers of the OBServer, OceanBase Database Proxy (ODP), and OCP.
+   * You can run the `docker load -i {docker image package}` command and the `docker images` command to obtain the version information of Docker containers of the OBServer node, ODP, and OCP.
 
    * To deploy OMS, enter the basic configuration of OMS, including the IP address of the OMS server and the version information of the OMS Docker container.
 
@@ -180,9 +179,9 @@ export SSH_KEY_FILE = /root/.ssh/id_rsa
    ##################  OCP multi-zone configurations  ######################
    OCP_MAZ_ENABLED=TRUE                                 #If multi-zone mode is enabled and no global VIP is available, the configured OCP_VIP and OBPROXY_VIP values can be changed to the VIP of the primary zone or the IP address of any OCP node.
    OCP_MAZ_AZ_NAME_LIST=(az1 az1 az2)                #The zone names that you specified for az_name for OCP 1, OCP 2, and OCP 3.
-   OCP_MAZ_OCP_VIP_LIST=(192.168.0.1 192.168.0.2 192.168.0.3)   #The IP addresses that you specified for site-url for OCP 1, OCP 2, and OCP 3.
+   OCP_MAZ_OCP_VIP_LIST=(xx.xx.xx.1 xx.xx.xx.2 xx.xx.xx.3)   #The IP addresses that you specified for site-url for OCP 1, OCP 2, and OCP 3.
    OCP_MAZ_OCP_VPORT_LIST=(8080 8080 8080)      #The port numbers that you specified for site-url for OCP 1, OCP 2, and OCP 3.
-   OCP_MAZ_METAPROXY_VIP_LIST=(192.168.0.1 192.168.0.2 192.168.0.3)  #The IP addresses of MetaDB for OCP 1, OCP 2, and OCP 3.
+   OCP_MAZ_METAPROXY_VIP_LIST=(xx.xx.xx.1 xx.xx.xx.2 xx.xx.xx.3)  #The IP addresses of MetaDB for OCP 1, OCP 2, and OCP 3.
    OCP_MAZ_METAPROXY_VPORT_LIST=(2883 2883 2883)         #The port numbers of MetaDB for OCP 1, OCP 2, and OCP 3.
    ```
 
@@ -192,7 +191,7 @@ export SSH_KEY_FILE = /root/.ssh/id_rsa
 
    <main id="notice" type='explain'>
      <h4>Note</h4>
-     <p>By default, in the template for multi-zone OCP deployment, three zones are configured. You can add or delete the number of values for related parameters as needed. For example, if you want to deploy the OCP cluster across two zones, set `OCP_MAZ_AZ_NAME_LIST=(az1 az2)`. </p>
+     <p>By default, in the template for multi-zone OCP deployment, three zones are configured. You can add or delete the number of values for related parameters as needed. For example, if you want to deploy the OCP cluster across two zones, set <code>OCP_MAZ_AZ_NAME_LIST=(az1 az2)</code>. </p>
    </main>
 
    * `OCP_MAZ_ENABLED`: specifies whether to enable the multi-zone mode. Default value: `FALSE`. Set the value to `TRUE` when you need to enable multi-zone mode.
