--- a/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/2.deploy-ocp-command-line/3.start-deployment-ocp-command-line.md
+++ b/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/2.deploy-ocp-command-line/3.start-deployment-ocp-command-line.md
@@ -1,4 +1,4 @@
-# Start OCP deployment
+# Deploy OCP
 
 After the configuration file is generated, you can use oat-cli to deploy OceanBase Cloud Platform (OCP).
 
@@ -71,6 +71,6 @@ If the log contains the following information, OCP is deployed:
 [2020-02-11 22:53:21.201536] INFO [step8: post check done]
 ```
 
-## Subsequent operations
+## What to do next
 
 For more information about how to verify OCP deployment, see [Verify OCP deployment](4.post-deployment-check-ocp-command-line.md).
