--- a/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/4.deploy-obproxy-command-line/1.deploy-obproxy-command-line.md
+++ b/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/4.deploy-obproxy-command-line/1.deploy-obproxy-command-line.md
@@ -7,7 +7,7 @@ This topic describes how to install ODP by using the ODP package.
   <main id="notice" type='notice'>
     <h4>Notice</h4>
     <ul>
-    <li>After you deploy ODP on a server, ODP provides the proxy service of OceanBase Database by exposing a socket in the format of <code>IP address:port</code>. You can access OceanBase Database through the socket in the same way you access MySQL databases. We recommend that you deploy ODP on an OBServer node.<code></code> </li>
+    <li>After you deploy ODP on a server, ODP provides the proxy service of OceanBase Database by exposing a socket in the format of <code>IP address:port</code>. You can access OceanBase Database through the socket in the same way you access MySQL databases. We recommend that you deploy ODP on an OBServer node. </li>
     <li>We recommend that you deploy only one ODP on a server and use port <code>2883</code>. If you deploy multiple ODPs on the same server, you need to specify different ports and configuration file paths for differentiation. You can set the port number to <code>3306</code>, <code>1521</code>, or other port numbers. </li>
     </ul>
   </main>
@@ -123,7 +123,7 @@ Example:
 Create the proxyro user and grant the `SELECT` privilege to the user.
 
 ```sql
-$obclient -h10.10.10.1 -P2881 -uroot@sys -p
+$obclient -hxxx.xxx.xxx.1 -P2881 -uroot@sys -p
 Enter password:
 
 obclient [(none)]> CREATE USER proxyro IDENTIFIED BY '123456';
@@ -153,13 +153,13 @@ obclient [(none)]> SHOW GRANTS FOR proxyro;
    Startup code:
 
    ```shell
-   cd /opt/taobao/install/obproxy && bin/obproxy -r "10.10.10.1:2881;10.10.10.2:2881;10.10.10.3:2881" -p 2883 -o "observer_sys_password=$sha1_value,enable_strict_kernel_release=false,enable_cluster_checkout=false,enable_metadb_used=false" -c tenant_name
+   cd /opt/taobao/install/obproxy && bin/obproxy -r "xxx.xxx.xxx.1:2881;xxx.xxx.xxx.2:2881;xxx.xxx.xxx.3:2881" -p 2883 -o "observer_sys_password=$sha1_value,enable_strict_kernel_release=false,enable_cluster_checkout=false,enable_metadb_used=false" -c tenant_name
    ```
 
   <main id="notice" type='explain'>
     <h4>Note</h4>
     <ul>
-    <li>Replace the password in <code>$sha1_value</code> with the actual password. When you set the startup parameter of ODP, the password is the value behind `sha1` instead of the original value. For example, if the password of the proxyro user is <code>123456</code>, the <code>observer_sys_password</code> parameter must be set to <code>7c4a8d09ca3762af61e59520943dc26494f8941b</code>. </li>
+    <li>Replace the password in <code>$sha1_value</code> with the actual password. When you set the startup parameter of ODP, the password is the value behind <code>sha1</code> instead of the original value. For example, if the password of the proxyro user is <code>123456</code>, the <code>observer_sys_password</code> parameter must be set to <code>7c4a8d09ca3762af61e59520943dc26494f8941b</code>. </li>
     <li>The IP addresses in the sample code are for reference only. You need to enter the actual server IP address. </li>
     </ul>
   </main>
@@ -177,9 +177,9 @@ Example:
 
 ```shell
 [root@xxx admin]# su - admin
--bash-4.2$ cd /opt/taobao/install/obproxy && bin/obproxy -r "10.10.10.1:2881" -p 2883 -o "observer_sys_password=7c4a8d09ca3762af61e59520943dc26494f8941b,enable_strict_kernel_release=false,enable_cluster_checkout=false,enable_metadb_used=false" -c test3241
-bin/obproxy -r 10.10.10.1:2881 -p 2883 -o observer_sys_password=7c4a8d09ca3762af61e59520943dc26494f8941b,enable_strict_kernel_release=false,enable_cluster_checkout=false,enable_metadb_used=false -c test3241
-rs list: 10.10.10.1:2881
+-bash-4.2$ cd /opt/taobao/install/obproxy && bin/obproxy -r "xxx.xxx.xxx.1:2881" -p 2883 -o "observer_sys_password=7c4a8d09ca3762af61e59520943dc26494f8941b,enable_strict_kernel_release=false,enable_cluster_checkout=false,enable_metadb_used=false" -c test3241
+bin/obproxy -r xxx.xxx.xxx.1:2881 -p 2883 -o observer_sys_password=7c4a8d09ca3762af61e59520943dc26494f8941b,enable_strict_kernel_release=false,enable_cluster_checkout=false,enable_metadb_used=false -c test3241
+rs list: xxx.xxx.xxx.1:2881
 listen port: 2883
 optstr: observer_sys_password=7c4a8d09ca3762af61e59520943dc26494f8941b,enable_strict_kernel_release=false,enable_cluster_checkout=false,enable_metadb_used=false
 cluster_name: test3241
@@ -195,12 +195,12 @@ cluster_name: test3241
 
    ```shell
    [root@xxx admin]# ps -ef|grep obproxy
-   admin     79111      0  6 17:32 ?        00:00:58 bin/obproxy -r 10.10.10.1:2881 -p 2883 -o observer_sys_password=7c4a8d09ca3762af61e59520943dc26494f8941b,enable_strict_kernel_release=false,enable_cluster_checkout=false,enable_metadb_used=false -c test3241
+   admin     79111      0  6 17:32 ?        00:00:58 bin/obproxy -r xxx.xxx.xxx.1:2881 -p 2883 -o observer_sys_password=7c4a8d09ca3762af61e59520943dc26494f8941b,enable_strict_kernel_release=false,enable_cluster_checkout=false,enable_metadb_used=false -c test3241
    ```
 
-## Subsequent operations
+## What to do next
 
-### Run the following command to connect to OceanBase Database:
+### Connect to OceanBase Database
 
 When you connect to OceanBase Database through ODP, you must combine the username, tenant name, and cluster name. Valid format: **Username@Tenant name#Cluster name** or **Cluster name:Tenant name:Username**.
 
@@ -210,14 +210,9 @@ Example:
 
    ```shell
    [admin@xxx /home/admin]
-   $obclient -h10.10.10.1 -P2883 -uroot@sys#test3241 -p
-   Enter password:
+   $obclient -hxxx.xxx.xxx.1 -P2883 -uroot@sys#test3241 -p******
    Welcome to the OceanBase.  Commands end with ; or \g.
-   Your OceanBase connection id is 1
-   Server version: OceanBase 3.2.4.1 (r101000052023010822-346aa35c32e99d1b82d713f75f0072c45bdf7aab) (Built Jan  8 2023 22:52:43)
-
-   Copyright (c) 2000, 2018, OceanBase and/or its affiliates. All rights reserved.
-
+   ...
    Type 'help;' or '\h' for help. Type '\c' to clear the current input statement.
 
    obclient [(none)]>
@@ -227,12 +222,9 @@ Example:
 
    ```shell
    [admin@xxx /home/admin]
-   $obclient -h10.10.10.1 -P2883 -utest3241:sys:root -p
-   Enter password:
+   $obclient -hxxx.xxx.xxx.1 -P2883 -utest3241:sys:root -p******
    Welcome to the OceanBase.  Commands end with ; or \g.
-   Your OceanBase connection id is 4
-   Server version: OceanBase 3.2.4.1 (r101000052023010822-346aa35c32e99d1b82d713f75f0072c45bdf7aab) (Built Jan  8 2023 22:52:43)
-
+   ......
    Copyright (c) 2000, 2018, OceanBase and/or its affiliates. All rights reserved.
 
    Type 'help;' or '\h' for help. Type '\c' to clear the current input statement.
@@ -277,8 +269,8 @@ visible_level: SYS
 2 rows in set
 ```
 
-## References
+<!-- ## References
 
 * For more information about how to deploy ODP, see [Deployment methods](https://www.oceanbase.com/docs/enterprise-odp-enterprise-cn-10000000000982790).
 * For more information about how to adjust ODP parameters, see [Parameter description](https://www.oceanbase.com/docs/enterprise-odp-enterprise-cn-10000000000982784).
-* For more information about how to use ODP to connect to OceanBase Database, see [Connection management](https://www.oceanbase.com/docs/enterprise-odp-enterprise-cn-10000000000982772).
+* For more information about how to use ODP to connect to OceanBase Database, see [Connection management](https://www.oceanbase.com/docs/enterprise-odp-enterprise-cn-10000000000982772). -->
