--- a/en-US/6.manage/6.backup-and-recovery/1.overview-of-physical-backup-and-recovery.md
+++ b/en-US/6.manage/6.backup-and-recovery/1.overview-of-physical-backup-and-recovery.md
@@ -1,8 +1,8 @@
-# Introduction to physical backup and recovery
+# Introduction to physical backup and restore
 
-As the core component to ensure the high availability of OceanBase Database, the backup and recovery module protects data security by preventing misoperations and damages to the storage media. If data is lost due to misoperations or damage to the storage media, you can recover the data.
+As the core component to ensure the high availability of OceanBase Database, the backup and restore module protects data security by preventing misoperations and damages to the storage media. If data is lost due to misoperations or damage to the storage media, you can restore the data.
 
-OceanBase Database V4.0.0 supports the backup, recovery, and purging of data in two types of storage media: Object Storage Service (OSS) and Network File System (NFS).
+OceanBase Database supports the backup, restore, and purging of data in two types of storage media: Object Storage Service (OSS) and Network File System (NFS).
 
 OceanBase Database supports tenant-level physical backup. Physical backup data includes backup data and log archive data. Therefore, physical backup consists of log archiving and data backup.
 
