--- a/en-US/6.manage/6.backup-and-recovery/2.deploy-nfs.md
+++ b/en-US/6.manage/6.backup-and-recovery/2.deploy-nfs.md
@@ -4,7 +4,7 @@ This topic describes how to deploy Network File System (NFS) as the backup desti
 
 You can use Object Storage Service (OSS) or a dedicated NFS device. We recommend that you use an NFS device provided by Alibaba Cloud.
 
-## Usage notes
+## Considerations
 
 * To use an NFS environment, make sure that you have mounted NFS before enabling the backup service. If NFS fails during backup, stop data backup and log archiving first and then resolve the NFS issue.
 
@@ -124,8 +124,6 @@ This section describes how to deploy the NFS client on an OBServer node.
    ```shell
    sudo mount -tnfs4 -o rw,nfsvers=4.1,sync,lookupcache=positive,hard,timeo=600,wsize=1048576,rsize=1048576,namlen=255 10.10.10.1:/data/1 /data/nfs
    ```
-
-   Parameters:
 
    * `nfsvers=4.1`: the NFS version. We recommend that you use NFS version 4.1 or later because the backup depends on the native file lock of NFS version 4. NFS version 4.0 has a bug, namely, the old file may be read after it is renamed.
 
