--- a/en-US/6.manage/6.backup-and-recovery/3.log-archive/7.view-log-archive-history.md
+++ b/en-US/6.manage/6.backup-and-recovery/3.log-archive/7.view-log-archive-history.md
@@ -108,8 +108,8 @@ You can query the `oceanbase.DBA_OB_ARCHIVELOG_SUMMARY` view from a user tenant 
 1. Log on to the database as an administrator of a user tenant.
 
    <main id="notice" type='explain'>
-        <h4>Note:</h4>
-        <p>The administrator user is <code>root</code> for MySQL tenants and <code>SYS</code> for Oracle tenants. </p>
+     <h4>Note</h4>
+     <p>The administrator user is <code>root</code> for MySQL tenants and <code>SYS</code> for Oracle tenants. </p>
    </main>
 
 2. Execute the following statement to view the log archiving history of the current tenant:
