--- a/en-US/6.manage/6.backup-and-recovery/4.data-backup/1.preparation-before-data-backup.md
+++ b/en-US/6.manage/6.backup-and-recovery/4.data-backup/1.preparation-before-data-backup.md
@@ -1,12 +1,12 @@
 # Preparations
 
-You must configure the backup destination in the `DATA_BACKUP_DEST` parameter before backup. The sys tenant is used for managing clusters and does not contain user data or support backup and recovery. Therefore, you do not need to configure the backup destination for the `sys` tenant.
+You must configure the `DATA_BACKUP_DEST` parameter before the backup. The sys tenant is used for managing clusters and does not contain user data or support backup and restore. Therefore, you do not need to configure the `DATA_BACKUP_DEST` parameter for the `sys` tenant.
 
-## Backup architecture
+<!--## Backup architecture
 
 Followers are preferentially used for backup. The following figure shows the backup architecture:
 
-![Backup architecture](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/user-guide/data-backup-architecture.png)
+![Backup architecture](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/user-guide/data-backup-architecture.png)-->
 
 ## Configure the backup destination
 
@@ -14,8 +14,8 @@ Followers are preferentially used for backup. The following figure shows the bac
 
 
    <main id="notice" type='explain'>
-        <h4>Note:</h4>
-        <p>The administrator user is <code>root</code> in MySQL mode and <code>SYS</code> in Oracle mode. </p>
+      <h4>Note</h4>
+      <p>The administrator user is <code>root</code> in MySQL mode and <code>SYS</code> in Oracle mode. </p>
    </main>
 
 2. Configure the backup destination.
@@ -35,13 +35,18 @@ Followers are preferentially used for backup. The following figure shows the bac
       ```sql
       ALTER SYSTEM SET DATA_BACKUP_DEST = 'data_backup_path';
       ```
+   <main id="notice" type='notice'>
+      <h4>Notice</h4>
+      <p>For scenarios where users upgrade from OceanBase Database V4.0.x to V4.1.0, the backup path should be changed after the upgrade.</p>
+   </main>
+
 
    Examples:
 
    * NFS
 
       <main id="notice" type='notice'>
-      <h4>Notice:</h4>
+      <h4>Notice</h4>
       <p>When you use NFS as the backup destination, note the following points:</p>
       <ul>
       <li>The value of <code>data_backup_dest</code> cannot be a string with a question mark (?). </li>
@@ -92,7 +97,7 @@ Followers are preferentially used for backup. The following figure shows the bac
        VALUE: file:///data/nfs/backup/data
    ```
 
-## Usage notes
+## Considerations
 
 After you set the `data_backup_dest` parameter, the system will create a file named `format` by default in the directory where the configured destination is located. This file is used to verify the validity of the backup destination and ensure the integrity of the data at the destination. Therefore, pay attention to the following points when you configure the `data_backup_dest` parameter:
 
