--- a/en-US/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/1.dump-management/3.trigger-dump-manually.md
+++ b/en-US/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/1.dump-management/3.trigger-dump-manually.md
@@ -1,10 +1,8 @@
 # Manually initiate a minor compaction
 
-You can use the `ALTER SYSTEM MINOR FREEZE` statement to manually initiate a minor compaction.
+You can execute the `ALTER SYSTEM MINOR FREEZE` statement in the sys tenant to manually initiate a minor compaction at the tenant, zone, server, log stream, or tablet level.
 
-## Initiate a minor compaction from the sys tenant
-
-You can initiate a minor compaction for all tenants or one or more specified tenants from the sys tenant.
+## Procedure
 
 1. Log on to the `sys` tenant of the cluster as the `root` user.
 
@@ -12,131 +10,108 @@ You can initiate a minor compaction for all tenants or one or more specified ten
 
    * Minor compaction at the tenant level
 
-      You can perform a minor compaction for all tenants or one or more specified tenants.
-
-      SQL syntax:
+      You can initiate a minor compaction for all tenants or for one or more specified tenants by using the following SQL syntax:
 
       ```sql
       obclient> ALTER SYSTEM MINOR FREEZE TENANT [=] ALL | tenant_name [, tenant_name ...];
       ```
 
-      Example:
+      Sample statement:
 
       ```sql
       obclient> ALTER SYSTEM MINOR FREEZE TENANT =ALL;
+      Query OK, 0 rows affected
 
-      obclient> ALTER SYSTEM MINOR FREEZE tenant = sys;
+      obclient> ALTER SYSTEM MINOR FREEZE tenant = tenant1;
+      Query OK, 0 rows affected
 
       obclient> ALTER SYSTEM MINOR FREEZE TENANT =tenant1,tenant2;
-
+      Query OK, 0 rows affected
       ```
 
       <main id="notice" type='explain'>
        <h4>Note</h4>
-       <p>If you execute the <code>ALTER SYSTEM MINOR FREEZE</code> statement without specifying a tenant, a minor compaction is performed for the current tenant. </p>
+       <p>If you execute the <code>ALTER SYSTEM MINOR FREEZE</code> statement without specifying a tenant, a minor compaction is initiated for the <code>sys</code> tenant. </p>
       </main>
 
    * Minor compaction at the zone level
 
-      You can perform a minor compaction for one or more specified zones.
-
-      SQL syntax:
+      You can initiate a minor compaction for one or more specified zones by using the following SQL syntax:
 
       ```sql
       obclient> ALTER SYSTEM MINOR FREEZE ZONE [=] zone_name [, zone_name ...];
       ```
 
-      Example:
+      Sample statement:
 
       ```sql
       obclient> ALTER SYSTEM MINOR FREEZE ZONE = zone1;
+      Query OK, 0 rows affected
       ```
 
    * Minor compaction at the server level
 
-      You can perform a minor compaction for one or more specified OBServer nodes.
-
-      SQL syntax:
+      You can initiate a minor compaction for one or more specified OBServer nodes by using the following SQL syntax:
 
       ```sql
       obclient> ALTER SYSTEM MINOR FREEZE SERVER = ('ip:port' [, 'ip:port'...]);
       ```
 
-      Example:
+      Sample statement:
 
       ```sql
-      obclient> ALTER SYSTEM MINOR FREEZE SERVER = ('10.10.10.1:2882');
+      obclient> ALTER SYSTEM MINOR FREEZE SERVER = ('xx.xx.xx.xx:2882');
+      Query OK, 0 rows affected
       ```
 
-   * Minor compaction at the partition level
+   * Minor compaction at the log stream level
 
-      You can initiate a minor compaction for a specified partition of a specified tenant.
-
-      SQL syntax:
+      You can initiate a minor compaction for a specified log stream of a specified tenant by using the following SQL syntax:
 
       ```sql
-      obclient> ALTER SYSTEM MINOR FREEZE TENANT [=] tenant_name TABLET_ID = tid;
+      ALTER SYSTEM MINOR FREEZE TENANT [=] tenant_name LS [=] ls_id;
       ```
 
-      In the statement, `tid` specifies the name of a partition in the tenant. You can query the `oceanbase.CDB_OB_TABLET_TO_L` view in the `sys` tenant for the partition name.
+      In the syntax, `tenant_name` specifies the name of a tenant and `ls_id` specifies the ID of a log stream in the tenant. You can query the `oceanbase.CDB_OB_TABLET_TO_LS` view for IDs of log streams.
 
-      Example:
+      Sample statement:
+
+      ```shell
+      obclient> ALTER SYSTEM MINOR FREEZE TENANT = t1 LS = 1001;
+      Query OK, 0 rows affected
+      ```
+
+      After you execute this statement, the system performs a minor compaction for all tablets in the specified log stream of the specified tenant.
+
+   * Minor compaction at the tablet level
+
+      You can initiate a minor compaction for a specified tablet in a specified tenant by using the following SQL syntax:
 
       ```sql
-      obclient> ALTER SYSTEM MINOR FREEZE tenant = t1 tablet_id = 60000;
+      ALTER SYSTEM MINOR FREEZE TENANT [=] tenant_name TABLET_ID = tid;
       ```
 
-3. After you initiate a minor compaction, you can view the information about it. For more information, see [View minor compaction information](4.view-dump-information.md).
-
-## Initiate a minor compaction for a user tenant from the current tenant
-
-You can initiate a minor compaction for a user tenant from the current tenant.
-
-1. Log on to OceanBase Database as the administrator of the tenant.
-
-2. Select a proper minor compaction type as needed.
-
-   * Initiate a minor compaction for the current tenant
+      Alternatively, you can initiate a minor compaction for a specified tablet in a specified log stream of a specified tenant by using the following SQL syntax:
 
       ```sql
-      obclient> ALTER SYSTEM MINOR FREEZE;
+      ALTER SYSTEM MINOR FREEZE TENANT [=] tenant_name LS [=] ls_id TABLET_ID = tid;
       ```
 
-   * Initiate a minor compaction for a specified OBServer node in the current tenant
+      In the syntax, `tenant_name` specifies the name of a tenant, `ls_id` specifies the ID of a log stream in the tenant, and `tid` specifies the ID of a tablet in the log stream. You can query the `oceanbase.CDB_OB_TABLET_TO_LS` view for the IDs of log streams and tablets.
 
-      You can perform a minor compaction for one or more specified OBServer nodes in the current tenant.
+      Sample statement:
 
-      SQL syntax:
+      ```shell
+      obclient> ALTER SYSTEM MINOR FREEZE TENANT = t1 tablet_id = 200001;
+      Query OK, 0 rows affected
 
-      ```sql
-      obclient> ALTER SYSTEM MINOR FREEZE SERVER = ('ip:port' [, 'ip:port'...]);
+      obclient> ALTER SYSTEM MINOR FREEZE TENANT = t1 LS = 1001 tablet_id = 200001;
+      Query OK, 0 rows affected
       ```
 
-      Example:
+## What to do next
 
-      ```sql
-      obclient> ALTER SYSTEM MINOR FREEZE SERVER = ('10.10.10.1:2882');
-      ```
-
-   * Initiate a minor compaction for a specified partition in the current tenant
-
-      You can initiate a minor compaction for a specified partition in the current tenant.
-
-      SQL syntax:
-
-      ```sql
-      obclient> ALTER SYSTEM MINOR FREEZE TABLET_ID = tid;
-      ```
-
-      In the statement, `tid` specifies the name of a partition in the current tenant. You can query the `oceanbase.DBA_OB_TABLET_TO_LS` or `sys.DBA_OB_TABLET_TO_LS` view for the partition name.
-
-      Example:
-
-      ```sql
-      obclient> ALTER SYSTEM MINOR FREEZE tablet_id = 50005;
-      ```
-
-3. After you initiate a minor compaction, you can view the information about it. For more information, see [View minor compaction information](4.view-dump-information.md).
+After you initiate a minor compaction, you can view the information about it. For more information, see [View minor compaction information](4.view-dump-information.md).
 
 ## References
 
