--- a/en-US/7.reference/6.oceanbase-tools/2.oceanbase-migration-service.md
+++ b/en-US/7.reference/6.oceanbase-tools/2.oceanbase-migration-service.md
@@ -1,6 +1,6 @@
 # OMS
 
-OceanBase Migration Service (OMS) is a service that supports data interaction between OceanBase Database and homogeneous or heterogeneous data sources. It supports online data migration and real-time synchronization of incremental data. 
+OceanBase Migration Service (OMS) is a service that supports data interaction between OceanBase Database and homogeneous or heterogeneous data sources. It supports online migration of existing data and real-time synchronization of incremental data. 
 
 OMS provides a visualized and centralized management platform. You can migrate data in real time with simple configurations. OMS aims to help you achieve real-time data migration and synchronization from homogeneous or heterogeneous databases to OceanBase Database at a low cost and low risk. 
 
@@ -34,17 +34,17 @@ OMS provides a visualized and centralized management platform. You can migrate d
 
    OMS provides multiple data consistency checks to ensure data quality. It displays differences in data to help you fix errors. 
 
-* Convenient data migration to or from OceanBase
+* Convenient data migration to or from OceanBase Database
 
    OMS supports the features of every version of OceanBase Database. It collects and converts database objects and supports data migration without interrupting the services of the source database. 
 
 ## Scenarios
 
-This topic describes the enterprise-class data migration and synchronization scenarios of OceanBase Migration Service (OMS). 
+This section describes the enterprise-class data migration and synchronization scenarios of OceanBase Migration Service (OMS). 
 
-### In-service data migration
+<!-- ### In-service data migration
 
-![image.png](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/oms/oms-enterprise/%E5%BA%94%E7%94%A8%E5%9C%BA%E6%99%AF.png)
+![image.png](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/oms/oms-enterprise/%E5%BA%94%E7%94%A8%E5%9C%BA%E6%99%AF.png) -->
 
 In traditional database migration solutions, data is usually migrated during downtime to ensure the migration stability and data consistency. During the downtime, data writes to the source database must be temporarily stopped. The business database can be switched only after the migration is completed and the data consistency is verified. 
 
@@ -62,11 +62,11 @@ OMS enables real-time data synchronization between physical tables of OceanBase 
 
 * The Store, Connector, and JDBCWriter components support high availability. When the Store, Connector, or JDBCWriter component fails, the corresponding abnormal process is restarted. 
 
-   ![HA1](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/oms/oms-enterprise/HA1.png)
+   <!-- ![HA1](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/oms/oms-enterprise/HA1.png) -->
 
 * IDC-level disaster recovery is supported. 
 
-   ![HA2](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/oms/oms-enterprise/HA2.png)
+   <!-- ![HA2](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/oms/oms-enterprise/HA2.png) -->
 
    * When a server fails, all components on this server are migrated to a functioning server. 
 
@@ -78,9 +78,9 @@ OMS enables real-time data synchronization between physical tables of OceanBase 
 
 * Regional IDC-level disaster recovery is supported. 
 
-   OMS supports separate deployment of incremental log read and incremental synchronous write. By using optimization methods such as multiple Transmission Control Protocols (TCPs) for parallel transmission, data compression, and data encryption, OMS can overcome challenges such as long distances, poor network conditions, and data security. Cross-region scheduling is not supported. 
+   OMS supports separate deployment of incremental log read and incremental synchronous write. By using optimization methods such as multiple Transmission Control Protocols (TCPs) for parallel transmission, data compression, and data encryption, OMS can overcome challenges such as long distances, poor network conditions, and data security. Note that cross-region scheduling is not supported currently. 
 
-   ![HA3](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/oms/oms-enterprise/HA3.png)
+   <!-- ![HA3](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/oms/oms-enterprise/HA3.png) -->
 
 ## Features
 
