--- a/en-US/7.reference/6.oceanbase-tools/3.oceanbase-cloud-platform.md
+++ b/en-US/7.reference/6.oceanbase-tools/3.oceanbase-cloud-platform.md
@@ -6,7 +6,7 @@ OCP provides full-lifecycle management of components such as OceanBase clusters 
 
 As an enterprise-level database management platform for OceanBase, OCP has a wealth of features:
 
-* Efficient OceanBase cluster management
+* Efficient cluster management
 
    * OCP supports high-availability deployment. 
 
@@ -34,7 +34,7 @@ As an enterprise-level database management platform for OceanBase, OCP has a wea
 
    * OCP provides full lifecycle management over OceanBase clusters 
 
-   * All management functions of OCP are designed based on features of OceanBase Database. 
+   * The management features of OCP are specifically designed based on the unique characteristics of OceanBase Database.
 
    * OCP provides progressive management from clusters to sessions. 
 
