--- a/en-US/7.reference/6.oceanbase-tools/4.1.ocp-express.md
+++ b/en-US/7.reference/6.oceanbase-tools/4.1.ocp-express.md
@@ -21,14 +21,14 @@ OCP Express adopts the **Agent-Server** architecture with the following characte
 * The metadata and monitoring data of OCP Express are stored in a separate tenant in the database cluster. The tenant that stores the data of OCP Express is isolated from business tenants, and no additional cluster is needed to store the data of OCP Express. 
 * OCP Express manages only one OceanBase cluster, which simplifies the logic and enhances capabilities. 
 
-![1](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/403-cn/OCPExpress.png)
+<!-- ![1](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/403-cn/OCPExpress.png) -->
 
 ## Installation and deployment
 
 OCP Express is deeply integrated with the OceanBase cluster. You can download the all-in-one package of OceanBase Database and select OCP Express during deployment. 
 
-* Obtain the all-in-one package of OceanBase Database Enterprise Edition or OceanBase Database Community Edition in [OceanBase Download Center](https://www.oceanbase.com/softwarecenter). 
-* For more information about how to install and deploy OCP Express, see [Deploy OCP Express by using a CLI tool](https://www.oceanbase.com/docs/community-obd-cn-10000000001690027) or [Deploy OCP Express by using OBD](https://www.oceanbase.com/docs/community-obd-cn-10000000001690695). 
+* Obtain the all-in-one package of OceanBase Database Enterprise Edition or OceanBase Database Community Edition in [OceanBase Download Center](https://en.oceanbase.com/softwarecenter). 
+* For more information about how to install and deploy OCP Express, see [Deploy OCP Express by using a CLI tool](https://en.oceanbase.com/docs/community-obd-en-10000000000862277)<!--  or [Deploy OCP Express by using OBD](https://www.oceanbase.com/docs/community-obd-cn-10000000001690695)  -->.
 
 ### Configuration requirements
 
