--- a/en-US/7.reference/6.oceanbase-tools/6.oceanbase-deployer.md
+++ b/en-US/7.reference/6.oceanbase-tools/6.oceanbase-deployer.md
@@ -1,10 +1,10 @@
 # OBD
 
-OceanBase Deploy (OBD) is an installation and deployment tool for open source OceanBase software. It is also a package manager for managing all open source OceanBase software. 
+OceanBase Deployer (OBD) is a versatile tool for installing and deploying the open source OceanBase software. Additionally, it functions as a comprehensive package manager, enabling efficient management of all OceanBase software.
 
 Features of OBD:
 
-* Quickly deploy the experience environment of OceanBase Community Edition by using the obd demo command.
+* Quickly deploy the experience environment of OceanBase Database Community Edition by using the `obd demo` command.
 
 * Deploy the production environment of OceanBase Database Community Edition.
 
