--- a/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/3.deploy-the-oceanbase-cluster/2.create-oceanbase-cluster.md
+++ b/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/3.deploy-the-oceanbase-cluster/2.create-oceanbase-cluster.md
@@ -23,7 +23,7 @@ This topic describes how to create an OceanBase cluster in the OceanBase Cloud P
 
 4. On the **Create Cluster** page, configure the basic information of the cluster.
 
-   ![1](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/4.deploy-the-oceanbase-database/OCP/2%E5%88%9B%E5%BB%BA%E9%9B%86%E7%BE%A4%E5%9F%BA%E7%A1%80%E4%BF%A1%E6%81%AF.png)
+   <!-- ![1](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/4.deploy-the-oceanbase-database/OCP/2%E5%88%9B%E5%BB%BA%E9%9B%86%E7%BE%A4%E5%9F%BA%E7%A1%80%E4%BF%A1%E6%81%AF.png) -->
 
    The following table describes the basic information parameters.
 
@@ -31,15 +31,15 @@ This topic describes how to create an OceanBase cluster in the OceanBase Cloud P
    |-------------------|-----------------|
    | **Cluster Type** | You can select **Primary Cluster** or **Standby Cluster**. In this example, **Primary Cluster** is selected.  |
    | **Cluster Name** | The name of the cluster to be created. The cluster name must be 2 to 48 characters in length and can contain letters, digits, and underscores (_). It must start with a letter.  |
-   | **root@sys Password** | This password can be customized or randomly generated. The password must meet the following complexity requirements: </br> <ol><li>Be 8 to 32 characters in length. </li><li>Contain at least two digits, two uppercase letters, two lowercase letters, and two special characters. </li></ol>  </br>The following special characters are supported:`~!@#%^&*_-+=(){}[]:;,.?/)` </br>In addition, you can click **Copy Password** to copy a custom or randomly generated password to the clipboard.  |
+   | **Root@sys Password** | This password can be customized or randomly generated. The password must meet the following complexity requirements: </br> <ol><li>Be 8 to 32 characters in length. </li><li>Contain at least two digits, two uppercase letters, two lowercase letters, and two special characters. </li></ol>  </br>The following special characters are supported: `~!@#%^&*_-+=(){}[]:;,.?/)` </br>In addition, you can click **Copy Password** to copy a custom or randomly generated password to the clipboard.  |
    | **OceanBase Version** | The OceanBase Database version. You can select a version from the drop-down list or click **Add Version** at the bottom of the list to upload the RPM package of an OceanBase Database version.  |
    | **Associate OBProxy Cluster** | This option is used to associate existing ODP clusters. In this example, this option is disabled.  For information about how to associate an ODP cluster, see OCP User Guide.  |
 
 5. On the **Create Cluster** page, configure the deployment mode of the cluster.
 
-   By default, three zones are added for a cluster. To deploy more than three zones for the cluster, click **Add**. To deploy less than three zones for the cluster, click the Delete icon after the zone to be deleted.
+   By default, three zones are added for a cluster. To deploy more than three zones for the cluster, click **Add**. To deploy less than three zones for the cluster, click the **Delete** icon after the zone to be deleted.
 
-   ![2](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/4.deploy-the-oceanbase-database/OCP/3%E9%83%A8%E7%BD%B2%E6%A8%A1%E5%BC%8F.png)
+   <!-- ![2](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/4.deploy-the-oceanbase-database/OCP/3%E9%83%A8%E7%BD%B2%E6%A8%A1%E5%BC%8F.png) -->
 
    The following table describes the settings for each zone.
 
@@ -47,7 +47,7 @@ This topic describes how to create an OceanBase cluster in the OceanBase Cloud P
    |--------------------|-----------------------------------|
    | **Zone Name** | Generally, a default name is provided. You can set a custom name as needed.  The zone name must be 2 to 48 characters in length and can contain letters, digits, and underscores (_). It must start with a letter.  |
    | **IDC** | The IDC of the zone. Hosts in a zone can be deployed in only the same IDC.  |
-   | **Host Type (Optional)** | If you select a host type, the host list is filtered based on the host type.  |
+   | **Model (Optional)** | If you select a host type, the host list is filtered based on the host type.  |
    | **Selection Method** | Choose **Automatic** or **Manual**.  |
    | **Host** | You can select multiple IP addresses. If **Server Selection Method** is set to **Automatic**, you only need to enter the number of hosts, and OCP automatically selects the specified number of hosts from the available hosts. If **Server Selection Method** is set to **Manual**, you need to manually select the IP addresses from the list.  |
    | **RootServer** | You must select an IP address as the host for the Root Service. If you want to create a multi-replica OceanBase cluster, you must specify this parameter for each zone.  |
@@ -72,7 +72,7 @@ This topic describes how to create an OceanBase cluster in the OceanBase Cloud P
 
 7. Optional. On the **Create Cluster** page, set the installation path.
 
-   Set **Software Installation Path**, **Data Disk Path**, and **Log disk path** as needed.
+   Set **Software Installation Path**, **Data Disk Path**, and **Log Disk Path** as needed.
 
    <!-- ![4](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/4.deploy-the-oceanbase-database/OCP/5%E5%AE%89%E8%A3%85%E8%B7%AF%E5%BE%84%E8%AE%BE%E7%BD%AE.png) -->
 
