--- a/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/4.deploy-obproxy/2.deploy-obproxy-graphical.md
+++ b/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/4.deploy-obproxy/2.deploy-obproxy-graphical.md
@@ -20,17 +20,17 @@ This topic describes how to create an ODP cluster in OceanBase Cloud Platform (O
 
 3. In the upper-right corner of the page, click **Create OBProxy Cluster**.
 
-4. On the **Create OBProxy Cluster** page, configure **Basic Information**.
+4. On the **Create OBProxy Cluster** page, configure **Basic Settings**.
 
-   ![1](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/4.deploy-the-oceanbase-database/OCP/6%E5%88%9B%E5%BB%BAobproxy.png)
+   <!-- ![1](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/4.deploy-the-oceanbase-database/OCP/6%E5%88%9B%E5%BB%BAobproxy.png) -->
 
    | Parameter | Description |
    |------------------|-------------|
    | **Cluster Name** | You can customize the cluster name. The value must start with a letter and can contain letters, digits, and underscores (_).  |
    | **Access URL** | The access URL of the ODP cluster. The access URL is only used to generate a connection string for the tenant. For a virtual IP (VIP) address, you must apply for the VIP and bind it to the ODP server.  |
-   | **Access Port** | The access port. The default port is 2883. You must specify the actual port based on the VIP.  |
+   | **Access Port Number** | The access port number. The default port number is 2883. You must specify the actual port number based on the VIP.  |
    | **Startup Method** | The startup method of the ODP cluster. Valid values:<ul><li>**ConfigUrl**: specifies the multicluster startup method, where the ODP cluster can access multiple OceanBase clusters. </li><li>**RsList**: specifies the single cluster startup method, where the ODP cluster can only access the OceanBase cluster specified when the ODP cluster is created. After an ODP cluster is created, no more connectable OceanBase clusters can be added. </li></ul> |
-   | **Connectable OceanBase Clusters** | The OceanBase clusters that are accessible to the ODP cluster.  <ul><li>This parameter is optional when you set <b>Startup Method</b> **ConfigUrl**. After the cluster is created, you can click **Add Connectable OceanBase Cluster** to add more OceanBase clusters. </li><li>This parameter is required when <b>Startup Method</b> is set to **RsList**. Select the OceanBase cluster from the drop-down list. </li></ul><blockquote><b>Note</b></br><ul><li>If the password box contains the credentials of the proxyro user of the cluster, the proxyro user is selected by default. </li><li>Otherwise, you can click <b>Create Connection</b> to create a connection credential for the proxyro user of the cluster. </li></ul></blockquote> |
+   | **Select Accsssible OceanBase Clusters** | The OceanBase clusters that are accessible to the ODP cluster.  <ul><li>This parameter is optional when you set <b>Startup Method</b> **ConfigUrl**. After the cluster is created, you can click **Add Connectable OceanBase Cluster** to add more OceanBase clusters. </li><li>This parameter is required when <b>Startup Method</b> is set to **RsList**. Select the OceanBase cluster from the drop-down list. </li></ul><blockquote><b>Note</b></br><ul><li>If the password box contains the credentials of the proxyro user of the cluster, the proxyro user is selected by default. </li><li>Otherwise, you can click <b>Create Connection</b> to create a connection credential for the proxyro user of the cluster. </li></ul></blockquote> |
 
 5. Optional. On the **Create OBProxy Cluster** page, configure **Deploy OBProxy**.
 
@@ -38,14 +38,14 @@ This topic describes how to create an ODP cluster in OceanBase Cloud Platform (O
 
    <!-- ![2](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/4.deploy-the-oceanbase-database/OCP/7%E9%83%A8%E7%BD%B2obproxy.png) -->
 
-   Toggle on the switch in the upper-right corner of the **Deploy OBProxy** page. Refer to the following table to specify the fields.
+   Toggle on the switch in the upper-right corner of the **Deploy OBProxy** page. Refer to the following table to specify the parameters.
 
    | **Parameter** | **Description** |
    |-------------------|-----------------|
    | **SQL Port Number** | The default port is 2883.  |
    | **Exporter Port Number** | The default port is 2884.  |
    | **Software Version** | Select the version of ODP RPM to install.  |
-   | **Parameters about ODP hosts** | Configure the host where ODP is deployed by setting the following parameters: **IDC**, **Host Type (Optional)**, **Selection Method**, and **Host IP Address**.  </br>By default, parameters for configuring two hosts are displayed. To deploy more hosts, click **Add OBProxy** to add a host. If you need to deploy only one ODP host, click the Delete icon next to the Host IP Address field to delete the host.  |
+   | **Parameters about ODP hosts** | Configure the host where ODP is deployed by setting the following parameters: **IDC**, **Host Type (Optional)**, and **Host**.  </br>By default, parameters for configuring two hosts are displayed. To deploy more hosts, click **Add OBProxy** to add a host. If you need to deploy only one ODP host, click the **Delete** icon next to the **Host** field to delete the host.  |
 
 6. Optional. On the **Create OBProxy Cluster** page, configure **Parameter Settings**.
 
