--- a/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/5.create-oceanbase-tenant/1.view-available-resources-of-business-tenant-graphical.md
+++ b/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/3.graphical-interface-deployment/5.create-oceanbase-tenant/1.view-available-resources-of-business-tenant-graphical.md
@@ -17,10 +17,10 @@ This topic describes how to view resources available for the tenants by using Oc
 
    <!-- ![1](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/4.deploy-the-oceanbase-database/OCP/9%E9%9B%86%E7%BE%A4%E5%88%97%E8%A1%A8.png) -->
 
-3. On the OBServers tab, you can view the available resources of the servers.
+3. On the **OBServers** tab, you can view the available resources of the servers.
 
    <!-- ![2](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/4.deploy-the-oceanbase-database/OCP/10observer%E5%88%97%E8%A1%A8.png) -->
 
-## Subsequent operations
+## What to do next
 
 After you confirm the cluster resources, you can create business tenants based on the remaining resources. For more information, see [Create a tenant](2.create-a-tenant-graphical.md).
