--- a/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/1.configure-a-deployment-environment-command-line/1.install-oat-cli.md
+++ b/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/1.configure-a-deployment-environment-command-line/1.install-oat-cli.md
@@ -1,10 +1,10 @@
 # Install oat-cli
 
-oat-cli is an automatic deployment tool for products in the OceanBase Database ecosystem. Before deployment, install the RPM package of oat-cli on all servers for automatic deployment.
+oat-cli is a tool that automates the deployment of products within the OceanBase Database ecosystem. To ensure successful deployment, install the RPM package of oat-cli on all servers first.
 
 ## Background
 
-Antman is a CLI tool (oat-cli for short) that supports quick and easy installation for peripheral tools of OceanBase Database, such as OceanBase Cloud Platform (OCP), OceanBase Migration Service (OMS), and OceanBase Developer Center (ODC). It also provides standard operating system configurations for OBServer nodes. It can be deployed on physical servers with the x86_64 or AArch64 architecture, or on mainstream virtual machines (VMs). It runs in mainstream Linux operating systems.
+oat-cli, also known as Antman, is a CLI tool that facilitates the easy and efficient installation of peripheral tools for OceanBase Database, including OceanBase Cloud Platform (OCP), OceanBase Migration Service (OMS), and OceanBase Developer Center (ODC). In addition, it provides standard operating system configurations for OBServer nodes. It can be deployed on physical servers with x86_64 or AArch64 architecture, as well as mainstream virtual machines running Linux operating systems.
 
 ## Procedure
 
