--- a/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/3.deploy-single-replica-oceanbase-cluster.md
+++ b/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/3.deploy-single-replica-oceanbase-cluster.md
@@ -4,6 +4,12 @@ You can deploy a single-replica OceanBase cluster and add nodes to the cluster. 
 
 This topic describes how to deploy a single-replica OceanBase cluster by using RPM packages.
 
+## Note
+
+If you want to implement resource isolation for your OceanBase database, configure cgroups before the deployment.
+
+For more information about resource isolation and cgroup, see [Resource isolation](../../../../6.manage/2.tenant-management/6.common-tenant-operations/3.resource-isolation/1.resource-isolation-overview.md) and [Configure cgroups](../../../../6.manage/2.tenant-management/6.common-tenant-operations/3.resource-isolation/3.resource-isolation-of-mysql-mode/1.config-cgroups-of-enterprise-of-mysql.md).
+
 ## Prerequisites
 
 Before you install OceanBase Database, make sure that the following prerequisites are satisfied:
@@ -59,7 +65,7 @@ Before you install OceanBase Database, make sure that the following prerequisite
 
 1. Clear the OceanBase Database directory (not required at the first deployment).
 
-   If you want to clear the old OceanBase Database environment, or problems occur during the installation and deployment process of OceanBase Database and thereby cause an environmental disorder or generate files that will affect the next installation, you can directly clear the old OceanBase Database directory. `$cluster_name` specifies the cluster name.
+   If you need to clear an old OceanBase Database environment or encounter issues during the installation and deployment process that disrupt the environment or generate files that may affect future installations, you can simply delete the existing OceanBase Database directory. The `$cluster_name` parameter specifies the name of the cluster.
 
    ```shell
    [root@xxx admin]# su - admin
@@ -142,13 +148,13 @@ store/
 
    ```shell
    [root@xxx admin]# su - admin
-   -bash-4.2$ cd /home/admin/oceanbase && /home/admin/oceanbase/bin/observer -i eth0 -P 2882 -p 2881 -z zone1 -d /home/admin/oceanbase/store/obdemo -r '10.10.10.1:2882:2881' -c 10001 -n obdemo -o "system_memory=30G,datafile_size=500G,config_additional_dir=/data/1/obdemo/etc3;/data/log1/obdemo/etc2"
+   -bash-4.2$ cd /home/admin/oceanbase && /home/admin/oceanbase/bin/observer -i eth0 -P 2882 -p 2881 -z zone1 -d /home/admin/oceanbase/store/obdemo -r 'xxx.xxx.xxx.xxx:2882:2881' -c 10001 -n obdemo -o "system_memory=30G,datafile_size=500G,config_additional_dir=/data/1/obdemo/etc3;/data/log1/obdemo/etc2"
    devname: eth0
    rpc port: 2882
    mysql port: 2881
    zone: zone1
    data_dir: /home/admin/oceanbase/store/obdemo
-   rs list: 10.10.10.1:2882:2881
+   rs list: xxx.xxx.xxx.xxx:2882:2881
    cluster id: 10001
    appname: obdemo
    optstr: system_memory=30G,datafile_size=500G,config_additional_dir=/data/1/obdemo/etc3;/data/log1/obdemo/etc2
@@ -163,7 +169,7 @@ store/
    | `-P` | The RPC port number, which is usually set to `2882`.  |
    | `-n` | The name of the cluster. It can be modified. Cluster names must be unique.  |
    | `-z` | The zone where the started observer process belongs.  |
-   | `-d` | The primary directory of the cluster. Do not modify other fields except for the cluster name `obdemo`.  |
+   | `-d` | The primary directory of the cluster. Do not modify other parameters except for the cluster name `obdemo`.  |
    | `-c` | The cluster ID. It is a group of digits and can be modified. Cluster IDs must be unique.  |
    | `-l` | The log level.  |
    | `-r` | The Root Service list in the format of ip:2882:2881. Multiple items are separated with semicolons (;) to indicate Root Service information. This parameter is consistent on the three servers.  |
@@ -195,7 +201,7 @@ store/
    obclient> SET SESSION ob_query_timeout=1000000000;
    Query OK, 0 rows affected
 
-   obclient> ALTER SYSTEM BOOTSTRAP ZONE 'zone1' SERVER '10.10.10.1:2882';
+   obclient> ALTER SYSTEM BOOTSTRAP ZONE 'zone1' SERVER 'xxx.xxx.xxx.xxx:2882';
    Query OK, 0 rows affected
    ```
 
@@ -229,12 +235,13 @@ store/
    By default, the password of the root user under the sys tenant is empty. After successful initialization, you need to change the password.
 
    ```sql
-   obclient> ALTER USER root IDENTIFIED BY '**1***';
+   obclient> ALTER USER root IDENTIFIED BY '******';
    Query OK, 0 rows affected
    ```
 
 ## References
 
-* For more information about the cluster startup parameters, see [Overview](../../../../7.reference/5.system-reference/1.system-configuration-items/2.system-configuration-items-overview-list.md).
-* For more information about how to change the password of a user, see [ALTER USER](../../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/18.alter-user-of-mysql-mode.md).
-* After the cluster is deployed, you need to create a business tenant. For more information, see [Create a tenant](../5.create-oceanbase-tenant-command-line/2.create-a-tenant-command-line.md).
+* [Connect to an OceanBase Database tenant by using OBClient](../../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/3.connect-to-an-oceanbase-tenant-by-using-obclient-of-mysql-mode.md)
+* [Summary of system parameters](../../../../7.reference/5.system-reference/1.system-configuration-items/2.system-configuration-items-overview-list.md)
+* [ALTER USER](../../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/18.alter-user-of-mysql-mode.md)
+* [Create a tenant](../5.create-oceanbase-tenant-command-line/2.create-a-tenant-command-line.md)
