--- a/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/4.deploy-three-oceanbase-replica-clusters.md
+++ b/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/3.deploy-the-oceanbase-cluster-command-line/4.deploy-three-oceanbase-replica-clusters.md
@@ -4,6 +4,12 @@ A three-replica OceanBase cluster requires at least three hosts respectively loc
 
 This topic describes how to install a three-replica OceanBase cluster through RPM packages.
 
+## Note
+
+If you want to implement resource isolation for your OceanBase database, configure cgroups before the deployment.
+
+For more information about resource isolation and cgroup, see [Resource isolation](../../../../6.manage/2.tenant-management/6.common-tenant-operations/3.resource-isolation/1.resource-isolation-overview.md) and [Configure cgroups](../../../../6.manage/2.tenant-management/6.common-tenant-operations/3.resource-isolation/3.resource-isolation-of-mysql-mode/1.config-cgroups-of-enterprise-of-mysql.md).
+
 ## Prerequisites
 
 Before you install OceanBase Database, make sure that the following prerequisites are satisfied:
@@ -39,19 +45,25 @@ Before you install OceanBase Database, make sure that the following prerequisite
       1:oceanbase-*-20220418212020.################################# [100%]
    ```
 
-2. Install OceanBase Client (OBClient).
+2. (Optional) Install OceanBase Client (OBClient).
 
-   OceanBase Database instances can be in Oracle or MySQL mode. To connect an Oracle tenant to a Java program, the Java driver file (`oceanbase-client-\*.jar`) provided by OceanBase Database is required. To access an Oracle tenant on CLI, you also need to install OBClient.
+OBClient is a command-line tool designed exclusively for OceanBase Database. It enables connectivity to both MySQL and Oracle tenants. If you only need to connect to the MySQL tenant, you can also use the MySQL client (mysql) to access OceanBase Database.
 
-   OBClient is a CLI client of OceanBase Database. Through OBClient, you can access MySQL and Oracle tenants of OceanBase Database.
+   <main id="notice" type='notice'>
+      <h4>Note</h4>
+      <p>In order to use versions of <code>obclient</code> before V2.2.1, install <code>libobclient</code> due to its dependency. To obtain the OBClient RPM package and the libobclient RPM package, contact OceanBase Technical Support.</p>
+   </main>
 
    Example:
 
    ```shell
-   [root@xxx $rpm_dir]# rpm -ivh obclient-1.2.6-20210510164331.el7.alios7.x86_64.rpm
+   [root@xxx /home/admin/rpm]# rpm -ivh obclient-2.2.1-20221122151945.el7.alios7.x86_64.rpm
+   Preparing...                          ################################# [100%]
+   Updating / installing...
+      1:obclient-2.2.1-20221122151945.el7################################# [100%]
 
-   ##Verify whether the installation is successful.##
-   [root@xxx $rpm_dir]# which obclient
+   ##Check whether the installation is successful##
+   [root@xxx /home/admin/rpm]# which obclient
    /usr/bin/obclient
    ```
 
@@ -59,7 +71,7 @@ Before you install OceanBase Database, make sure that the following prerequisite
 
 1. Clear the OceanBase Database directory (not required at the first deployment).
 
-   If you want to clear the old OceanBase Database environment, or problems occur during the installation and deployment process of OceanBase Database and thereby cause an environmental disorder or generate files that will affect the next installation, you can directly clear the old OceanBase Database directory. `$cluster_name` specifies the cluster name.
+   If you need to clear an old OceanBase Database environment or encounter issues during the installation and deployment process that disrupt the environment or generate files that may affect future installations, you can simply delete the existing OceanBase Database directory. The `$cluster_name` parameter specifies the name of the cluster.
 
    ```shell
    [root@xxx admin]# su - admin
@@ -138,7 +150,7 @@ store/
 
 1. Start the observer process on the nodes.
 
-   Start the observer process as the admin user on each node.``
+   Start the observer process as the `admin` user on each node.
 
    <main id="notice" type='notice'>
      <h4>Notice</h4>
@@ -271,12 +283,13 @@ store/
    By default, the password of the root user under the sys tenant is empty. After successful initialization, you need to change the password.
 
    ```sql
-   obclient> ALTER USER root IDENTIFIED BY '**1***';
+   obclient> ALTER USER root IDENTIFIED BY '******';
    Query OK, 0 rows affected
    ```
 
 ## References
 
-* For more information about the cluster startup parameters, see [Overview](../../../../7.reference/5.system-reference/1.system-configuration-items/2.system-configuration-items-overview-list.md).
-* For more information about how to change the password of a user, see [ALTER USER](../../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/18.alter-user-of-mysql-mode.md).
-* After the cluster is deployed, you need to create a business tenant. For more information, see [Create a tenant](../5.create-oceanbase-tenant-command-line/2.create-a-tenant-command-line.md).
+* [Connect to an OceanBase Database tenant by using OBClient](../../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/3.connect-to-an-oceanbase-tenant-by-using-obclient-of-mysql-mode.md)
+* [Summary of system parameters](../../../../7.reference/5.system-reference/1.system-configuration-items/2.system-configuration-items-overview-list.md)
+* [ALTER USER](../../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/18.alter-user-of-mysql-mode.md)
+* [Create a tenant](../5.create-oceanbase-tenant-command-line/2.create-a-tenant-command-line.md)
