--- a/en-US/6.manage/6.backup-and-recovery/3.log-archive/6.view-log-archive-progress.md
+++ b/en-US/6.manage/6.backup-and-recovery/3.log-archive/6.view-log-archive-progress.md
@@ -82,7 +82,7 @@ You can query the `oceanbase.DBA_OB_ARCHIVELOG` view from a user tenant in MySQL
 1. Log on to the database as a tenant administrator.
 
    <main id="notice" type='explain'>
-   <h4>Note:</h4>
+   <h4>Note</h4>
    <p>The administrator user is <code>root</code> for MySQL tenants and <code>SYS</code> for Oracle tenants. </p>
    </main>
 
