--- a/en-US/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/1.dump-management/5.modify-dump-configuration.md
+++ b/en-US/7.reference/2.administrator-guide/2.basic-database-management/5.manage-data-storage/1.dump-management/5.modify-dump-configuration.md
@@ -4,13 +4,13 @@ This topic describes the minor compaction parameters and how to set these parame
 
 ## Minor compaction parameters
 
-The most common parameter for controlling minor compactions is `major_compact_trigger`, which determines the number of minor compactions that triggers a major compaction. If the parameter is set to 0, minor compactions are disabled, and each time the MemTable memory usage of the tenant reaches the specified threshold, a major compaction is directly performed without performing minor compactions. You can configure the parameters based on the specific business needs.
+The most common parameter for controlling minor compactions is `major_compact_trigger`, which determines the number of minor compactions that triggers a major compaction. If the parameter is set to `0`, minor compactions are disabled, and each time the MemTable memory usage of the tenant reaches the specified threshold, a major compaction is directly performed without performing minor compactions. You can configure the parameters based on the specific business needs.
 
 | Parameter | Description | Default value | Value range |
 |-----------------------------|-------------------------------------------------------|-----|--------------|
 | minor_compact_trigger | The number of SSTables for triggering a minor compaction. It is a tenant-level parameter.  | 2 | [0,16] |
 | major_compact_trigger | The number of minor compactions for triggering a major compaction. It is a tenant-level parameter.  | 0 | [0,65535] |
-| freeze_trigger_percentage | The MemStore usage for triggering a minor freeze. It is a cluster-level parameter.  | 20 | [1,99] |
+| freeze_trigger_percentage | The maximum percentage of memory space used by the MemStore of the tenant to trigger a minor freeze. This is a tenant-level parameter.  | 20 | [1,99] |
 | memstore_limit_percentage | The percentage of MemStore memory to the total memory of the tenant. It is a cluster-level parameter.  | 50 | [1,99] |
 
   <main id="notice" type='explain'>
@@ -20,11 +20,11 @@ The most common parameter for controlling minor compactions is `major_compact_tr
 
 ## Modify minor compaction parameters by using SQL statements
 
-1. Log on to OceanBase Database as the administrator of the tenant.
+1. Log on to the database as a tenant administrator.
 
 2. Execute the following statements to modify minor compaction parameters:
 
-   Sample code:
+   Sample statements:
 
    ```sql
    obclient> ALTER SYSTEM SET minor_compact_trigger=2;
@@ -43,7 +43,7 @@ The most common parameter for controlling minor compactions is `major_compact_tr
 
 3. After the parameters are modified, you can execute the `SHOW PARAMETERS` statement to check whether the modification is successful.
 
-   Sample code:
+   Sample statements:
 
    ```sql
     obclient> SHOW PARAMETERS LIKE 'minor_compact_trigger';
