--- a/en-US/7.reference/6.oceanbase-tools/1.oceanbase-migration-assessment.md
+++ b/en-US/7.reference/6.oceanbase-tools/1.oceanbase-migration-assessment.md
@@ -1,10 +1,10 @@
 # OMA
 
-OceanBase Migration Assessment (OMA) is a database migration product of OceanBase that provides accurate compatibility assessment, efficient performance assessment, and application logic restructuring suggestions. OMA can assess the compatibility of OceanBase Database with many databases such as Oracle, DB2 LUW, and PostgreSQL and provide profile analysis and automatic conversion solutions. It supports application load replay, which helps customers predict the possible performance risks after migration, and provides optimization solutions. It also supports assessing the compatibility of OceanBase Database with systems in C, systems that run Java service code, and various drivers, which helps customers migrate data to OceanBase Database with high efficiency and low costs. 
+OceanBase Migration Assessment (OMA) is a database migration product of OceanBase that provides accurate compatibility assessment, efficient performance assessment, and application logic restructuring suggestions. OMA can assess the compatibility of OceanBase Database with other databases such as Oracle, DB2 LUW, and PostgreSQL and provide profile analysis and automatic conversion solutions. It supports application load replay, which helps customers predict the possible performance risks after migration and provides optimization solutions. It also supports assessing the compatibility of OceanBase Database with systems in C, systems that run Java service code, and various drivers, which helps customers migrate data to OceanBase Database with high efficiency and low costs. 
 
 ## Compatibility assessment
 
-OMA can assess the compatibility for data migration from Oracle, MySQL, PostgreSQL, TiDB, DB2 LUW, RDS MySQL, PolarDB for MySQL, PolarDB for Oracle, and DRDS instances to OceanBase Database and generate compatibility assessment reports. The assessment report for compatibility with the Oracle and MySQL databases lists specific causes of the incompatibility and suggests corresponding solutions. The assessment reports list only the reasons for the incompatibility with other types of database instances. 
+OMA provides a comprehensive compatibility assessment report for migrating data from various database instances, including Oracle, MySQL, PostgreSQL, TiDB, DB2 LUW, RDS MySQL, PolarDB for MySQL, PolarDB for Oracle, and DRDS, to OceanBase Database. The report lists specific causes of incompatibility with Oracle and MySQL databases and provides recommended solutions. However, for other types of database instances, the assessment report only provides the reasons for incompatibility without any recommended solutions. 
 
 OMA can assess the objects and SQL or PL statements of databases.
 
