--- a/en-US/7.reference/6.oceanbase-tools/4.oceanbase-developer-center.md
+++ b/en-US/7.reference/6.oceanbase-tools/4.oceanbase-developer-center.md
@@ -6,7 +6,7 @@ ODC adopts the mature browser/server architecture, which supports cross-platform
 
 ## Features
 
-ODC is an enterprise-level development platform for OceanBase Database. In ODC, you can edit and manage database objects and resources. 
+ODC is an enterprise-level development platform designed for OceanBase Database. In ODC, you can edit and manage database objects and resources. 
 
 ### Database object management
 
@@ -24,17 +24,17 @@ ODC is an enterprise-level development platform for OceanBase Database. In ODC, 
 
 * The ODC console supports Data Definition Language (DDL), Data Manipulation Language (DML), and secure data update. 
 
-* The ODC console supports Web SQL to help you use the various OceanBase features for development. 
+* The ODC console supports Web SQL to help you use various OceanBase features for development. 
 
-* The ODC console provides user-friendly features, such as syntax highlighting, formatting, and smart tips, that suit the MySQL and Oracle modes of OceanBase. 
+* The ODC console provides user-friendly features, such as syntax highlighting, formatting, and smart tips, that suit the MySQL and Oracle modes of OceanBase Database. 
 
 * The ODC console allows you to edit data in a visualized manner, which is similar to data editing in Excel. 
 
 ## Data import and export
 
-* ODC provides data import and export features, which are designed for OceanBase. 
+* ODC offers efficient data import and export capabilities specifically designed for the OceanBase Database.
 
-* ODC allows you to import and export files of various formats. 
+* With ODC, you can easily import and export files in various formats.
 
 ### Database variable editing
 
